client library for connecting to the robot

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
-add_library(utilities STATIC utilities.cpp)
+add_library(utilities STATIC g3l.cpp)
 target_include_directories(utilities PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(utilities PUBLIC cxxopts)
+target_link_libraries(utilities PUBLIC cxxopts KortexApiCpp tinyxml2::tinyxml2)
+
 
 
 add_executable(main main.cpp)
 target_link_libraries(main
-KortexApiCpp
 utilities
 )
